# COVID_cyTOF

./: .gitignore  flowchart_DNN.drawio  flowchart_data-management.drawio  main.ipynb  model3  poster.ipynb  pyproject.toml  readme.md
src/: covid_cytof_dataset.py  trainer.py
src/models/: configurable_nn.py  simple_nn.py
