[tool.poetry]
name = "covid_cytof"
version = "0.1.0"
description = ""
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
