[tool.poetry]
name = "covid_cytof"
version = "0.1.0"
description = ""
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fcsparser = "^0.2.4"
numpy = "^1.24.1"
pandas = "^1.5.3"
torch = "^1.13.1"
openpyxl = "^3.0.10"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
